fix on mobile

--- a/game.css
+++ b/game.css
@@ -55,19 +55,26 @@
   float: left;
   margin: 10px;
   border: 1px solid black;
-  width: 200px;
-  height: 700px;
+  width: 100%;
   padding: 10px;
   display: inline;
 }
 
 .letter {
   float: left;
-  width: 30px;
-  height: 30px;
+  width: 100px;
+  height: 100px;
   border: 1px solid black;
   margin: 5px;
   text-align: center;
   vertical-align: middle;
-  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.letter div {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 1.8em;
+  /* hack */
+  padding-top: 20px;
 }
